examples/test/testpolicy5180.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5180
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key30: value19
      key48: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value26
          key39: value27
      podSelector:
        matchLabels:
          key1: value37
          key48: value19
          key11: value13
